--- a/demo.html
+++ b/demo.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <title>Layout demo</title>
-    <script src="../demo/kitchen-sink/mini_require.js" type="text/javascript"></script>
+    <script src="demo/kitchen-sink/mini_require.js" type="text/javascript"></script>
     <script>
         require.config({
-            baseUrl: window.location.protocol + "//" + window.location.host + window.location.pathname.split("/").slice(0, -2).join("/"),
+            baseUrl: window.location.protocol + "//" + window.location.host +
+                window.location.pathname.split("/").slice(0, -1).join("/"),
             paths: {
                 ace: "src",
                 demo: "demo/kitchen-sink"
