--- a/src/demo/simple/index.html
+++ b/src/demo/simple/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Layout demo</title>
+    <title>Simple layout demo</title>
 
 
     <style type="text/css">
