demo paths fixed

--- a/src/demo/preferences/index.html
+++ b/src/demo/preferences/index.html
@@ -16,7 +16,7 @@
 
 <div class="ace_diff-container"></div>
 
-<script src="bundle.preferences.js"></script>
+<script src="../bundle.preferences.js"></script>
 
 </body>
 </html>
