--- a/src/demo/simple/index.html
+++ b/src/demo/simple/index.html
@@ -14,6 +14,6 @@
     </style>
 </head>
 <body>
-<script src="bundle.simple.js"></script>
+<script src="../bundle.simple.js"></script>
 </body>
 </html>
