react wrapper poc demo

--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -33,6 +33,7 @@
     <li><a href="simple">Simple demo for tab management with file system</a></li>
     <li><a href="preferences">Demo for preferences</a></li>
     <li><a href="layout">Advanced demo for layout</a></li>
+    <li><a href="jsx">Demo for jsx</a></li>
 </ul>
 
 </body>
